made placeholders/image references relative instead of tied to root

--- a/source/_patterns/02-organisms/heros/_classic-hero.mustache
+++ b/source/_patterns/02-organisms/heros/_classic-hero.mustache
@@ -1,4 +1,4 @@
-<section class="hero-classic overlay-black" style="background-image:url('/placeholders/images/wolfie-1900.jpg');">
+<section class="hero-classic overlay-black" style="background-image:url('../../placeholders/images/wolfie-1900.jpg');">
 
 {{# shownav }}
   <div class="hero-classic--navigation">
