--- a/source/_patterns/04-pages/StudentOrientation2016.mustache
+++ b/source/_patterns/04-pages/StudentOrientation2016.mustache
@@ -14,7 +14,7 @@ This section is only visible on mobile screens.
   </div>
 </section>
 
-<section class="redRaysBorder hidden-md hidden-lg" style="background-image: url('/placeholders/images/orientation/redSwooshes.jpg');"></section>
+<section class="redRaysBorder hidden-md hidden-lg" style="background-image: url('../../placeholders/images/orientation/redSwooshes.jpg');"></section>
 
 <!-- ===========================================================================
 
@@ -22,7 +22,7 @@ This section is only visible on mobile screens.
 
 ============================================================================ -->
 
-<section class="fluffy full-height-section display--flex gradient-overlay__TopRight" style="background: url('/placeholders/images/orientation/orientation-hero.jpg'); background-size: cover;">
+<section class="fluffy full-height-section display--flex gradient-overlay__TopRight" style="background: url('../../placeholders/images/orientation/orientation-hero.jpg'); background-size: cover;">
   <div class="container display--flex">
     <div class="col-md-7">
       <h2 class="heading white">Welcome to Student Technology</h2>
@@ -346,7 +346,7 @@ The settings for the "sliding" action are set in main.js
 
 ==================================================================== -->
 
-<section class="redRaysBorder" style="background-image: url('/placeholders/images/orientation/redSwooshes.jpg');"></section>
+<section class="redRaysBorder" style="background-image: url('../../placeholders/images/orientation/redSwooshes.jpg');"></section>
 
 <section id="gettingHelp" class="fluffy bg-farbeyondred">
   <div class="container display--flex">
@@ -361,7 +361,7 @@ The settings for the "sliding" action are set in main.js
   </div>
 </section>
 
-<section class="redRaysBorder" style="background-image: url('/placeholders/images/orientation/redSwooshes.jpg');"></section>
+<section class="redRaysBorder" style="background-image: url('../../placeholders/images/orientation/redSwooshes.jpg');"></section>
 
 <!-- ===========================================================================
 
@@ -379,7 +379,7 @@ card is selected.
 
   <div class="panelSOLAR slideout-panel from-right">
     <div class="slideout-panel-container">
-        <div class="cozy" style="background-image: url('/placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
+        <div class="cozy" style="background-image: url('../../placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
           <div class="container">
             <a href="#0" class="slideout-panel-close">Close</a>
             <!-- SOLAR Conent ================================================ -->
@@ -478,7 +478,7 @@ card is selected.
 
   <div class="panelWiFi slideout-panel from-right">
     <div class="slideout-panel-container">
-        <div class="cozy" style="background-image: url('/placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
+        <div class="cozy" style="background-image: url('../../placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
           <div class="container">
             <a href="#0" class="slideout-panel-close">Close</a>
             <!-- SOLAR Conent ================================================ -->
@@ -550,7 +550,7 @@ card is selected.
 
   <div class="panelNetID slideout-panel from-right">
     <div class="slideout-panel-container">
-        <div class="cozy" style="background-image: url('/placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
+        <div class="cozy" style="background-image: url('../../placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
           <div class="container">
             <a href="#0" class="slideout-panel-close">Close</a>
             <!-- SOLAR Conent ================================================ -->
@@ -626,7 +626,7 @@ card is selected.
 
   <div class="panelPrinting slideout-panel from-right">
     <div class="slideout-panel-container">
-        <div class="cozy" style="background-image: url('/placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
+        <div class="cozy" style="background-image: url('../../placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
           <div class="container">
             <a href="#0" class="slideout-panel-close">Close</a>
             <!-- SOLAR Conent ================================================ -->
@@ -691,7 +691,7 @@ card is selected.
 
   <div class="panelSINC slideout-panel from-right">
     <div class="slideout-panel-container">
-        <div class="cozy" style="background-image: url('/placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
+        <div class="cozy" style="background-image: url('../../placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
           <div class="container">
             <a href="#0" class="slideout-panel-close">Close</a>
             <!-- SOLAR Conent ================================================ -->
@@ -759,7 +759,7 @@ card is selected.
 
   <div class="panelHwSw slideout-panel from-right">
     <div class="slideout-panel-container">
-        <div class="cozy" style="background-image: url('/placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
+        <div class="cozy" style="background-image: url('../../placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
           <div class="container">
             <a href="#0" class="slideout-panel-close">Close</a>
             <!-- SOLAR Conent ================================================ -->
@@ -829,7 +829,7 @@ card is selected.
 
   <div class="panelMBC slideout-panel from-right">
     <div class="slideout-panel-container">
-        <div class="cozy" style="background-image: url('/placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
+        <div class="cozy" style="background-image: url('../../placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
           <div class="container">
             <a href="#0" class="slideout-panel-close">Close</a>
             <!-- SOLAR Conent ================================================ -->
@@ -885,7 +885,7 @@ card is selected.
 
   <div class="panelGoogle slideout-panel from-right">
     <div class="slideout-panel-container">
-        <div class="cozy" style="background-image: url('/placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
+        <div class="cozy" style="background-image: url('../../placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
           <div class="container">
             <a href="#0" class="slideout-panel-close">Close</a>
             <!-- SOLAR Conent ================================================ -->
@@ -946,7 +946,7 @@ card is selected.
 
   <div class="panelBlackboard slideout-panel from-right">
     <div class="slideout-panel-container">
-        <div class="cozy" style="background-image: url('/placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
+        <div class="cozy" style="background-image: url('../../placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
           <div class="container">
             <a href="#0" class="slideout-panel-close">Close</a>
             <!-- SOLAR Conent ================================================ -->
@@ -1010,7 +1010,7 @@ card is selected.
 
   <div class="panelLynda slideout-panel from-right">
     <div class="slideout-panel-container">
-        <div class="cozy" style="background-image: url('/placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
+        <div class="cozy" style="background-image: url('../../placeholders/images/orientation/redSwooshes.jpg'); background-size: cover;">
           <div class="container">
             <a href="#0" class="slideout-panel-close">Close</a>
             <!-- SOLAR Conent ================================================ -->
