--- a/source/_patterns/00-atoms/04-images/000-logo.mustache
+++ b/source/_patterns/00-atoms/04-images/000-logo.mustache
@@ -1,1 +1,1 @@
-<a href="{{ url }}"><img src="/images/logos/stony-brook-university-logo.jpg" class="logo" alt="Logo Alt Text" /></a>
+<a href="{{ url }}"><img src="../../images/logos/stony-brook-university-logo.jpg" class="logo" alt="Logo Alt Text" /></a>
