Updates to student orientation guide.

--- a/source/_patterns/04-pages/StudentOrientation2016.mustache
+++ b/source/_patterns/04-pages/StudentOrientation2016.mustache
@@ -22,17 +22,19 @@ This section is only visible on mobile screens.
 
 ============================================================================ -->
 
-<section class="fluffy full-height-section display--flex gradient-overlay__TopRight" style="background: url('../../placeholders/images/orientation/orientation-hero.jpg'); background-size: cover;">
-  <div class="container display--flex">
-    <div class="col-md-12">
-      <h2 class="heading white">Student Information Technology Guide</h2>
-        <p class="normal-text white">This guide will provide you with an overview on essential services offered by the Division of Information Technology (DoIT) that will enable you to be successful at Stony Brook University.</p>
+<section class="fluffy display--flex gradient-overlay__TopRight" style="background-image: url('../../placeholders/images/orientation/redSwooshes.jpg');">
+<div class="container">
+    <div class="col-md-7">
       <div class="youtube-container">
         <div class="youtube-player" data-id="DJ8hg4m6Nbg"></div>
       </div>
-      <a href="#gettingStarted" class="default-button button-large scrollto">Continue Exploring &raquo;</a>
     </div>
+    <div class="col-md-5 bg-white side-padding cozy">
+      <h2 class="heading red">Student Technology Guide</h2>
+      <p class="normal-text">This guide will provide you with an overview on essential services offered by the Division of Information Technology (DoIT) that will enable you to be successful at Stony Brook University.</p>
+      <a href="#gettingStarted" class="default-button button-large scrollto">Continue Exploring &raquo;</a>
 
+    </div>
   </div>
 </section>
 
@@ -117,7 +119,7 @@ The settings for the "sliding" action are set in main.js
         ** Getting Started Carousels **
       ====================================================================== -->
       <section id="gettingStarted">
-        <div class="full-height-section display--flex">
+        <div class="display--flex">
           <div class="container">
             <div class="col-md-12 col-sm-12 cozy">
                 <div class="cozy text-center">
@@ -135,7 +137,7 @@ The settings for the "sliding" action are set in main.js
                 </div>
                 <div class="col-md-7 col-sm-12">
                   <div class="airy side-padding">
-                    <h2 class="heading white">WolfieNet (Wi-Fi)</h2>
+                    <h2 class="heading white">WolfieNet<span class="small">.stonybrook.edu</span> <br>(Wi-Fi)</h2>
                     <h4 class="subheading white">WolfieNet is Stony Brook University's wireless network on West Campus, Southampton, Manhattan, and parts of East Campus. It is available to all faculty, students, staff, and guests.</h4>
                     <br>
                   <span href="panelWifi-btn" class="default-button default-button__white">Learn More About Wi-Fi &raquo;</span></p>
@@ -148,7 +150,7 @@ The settings for the "sliding" action are set in main.js
                 </div>
                 <div class="col-md-7 col-sm-12">
                   <div class="airy side-padding">
-                    <h2 class="heading white">SOLAR</h2>
+                    <h2 class="heading white">SOLAR<span class="small">.stonybrook.edu</span></h2>
                     <h4 class="subheading white">SOLAR is Stony Brook University's enterprise-wide, self-service system which provides faculty, staff, and students with online access to manage personal information.</h4>
                     <br>
                     <span href="panelSOLAR-btn" class="default-button default-button__white">Learn More About SOLAR &raquo;</span></p>
@@ -161,7 +163,7 @@ The settings for the "sliding" action are set in main.js
                 </div>
                 <div class="col-md-7 col-sm-12">
                   <div class="airy side-padding">
-                    <h2 class="heading white">NetID</h2>
+                    <h2 class="heading white">NetID<span class="small">.stonybrook.edu</span></h2>
                     <h4 class="subheading white">Every active employee, student, and faculty member is assigned a NetID which is used to access various computing resources.</h4>
                     <br>
                     <span href="panelNetID-btn" class="default-button default-button__white">Learn More About NetID &raquo;</span></p>
@@ -187,7 +189,7 @@ The settings for the "sliding" action are set in main.js
       ** Around Campus Section **
       ==================================================================== -->
       <section id="aroundCampus">
-        <div class="full-height-section display--flex">
+        <div class="display--flex">
           <div class="container">
             <div class="col-md-12 col-sm-12 cozy">
               <div class="cozy text-center">
@@ -204,7 +206,7 @@ The settings for the "sliding" action are set in main.js
                   </div>
                   <div class="col-md-7 col-sm-12">
                     <div class="airy">
-                      <h2 class="heading white">Printing</h2>
+                      <h2 class="heading white">Printing<span class="small">.stonybrook.edu</span></h2>
                       <h4 class="subheading white">Students can print in SINC Sites and other computer labs on campus, or by using Stony Brook's Print From Anywhere service.</h4>
                       <br>
                       <span class="default-button default-button__white panelPrinting-btn">Learn More About Printing &raquo;</span></p>
@@ -217,7 +219,7 @@ The settings for the "sliding" action are set in main.js
                   </div>
                   <div class="col-md-7 col-sm-12">
                     <div class="airy">
-                      <h2 class="heading white">SINC Sites</h2>
+                      <h2 class="heading white">SINC Sites<span class="small">.stonybrook.edu</span></h2>
                       <h4 class="subheading white">SINC Sites are public computer labs that allow users to access both Windows & Mac computers. SINC Sites provide printing services and access to numerous academic software titles.</h4>
                       <br>
                       <span href="panelSINC-btn" class="default-button default-button__white">Learn More About SINC Sites &raquo;</span></p>
@@ -230,7 +232,7 @@ The settings for the "sliding" action are set in main.js
                   </div>
                   <div class="col-md-7 col-sm-12">
                     <div class="airy side-padding">
-                      <h2 class="heading white">Software / Hardware</h2>
+                      <h2 class="heading white">Software<span class="small">.stonybrook.edu</span><br>Hardware<span class="small">.stonybrook.edu</span></h2>
                       <h4 class="subheading white">DoIT provides reccommendations and discounts on the latest computer hardware, as well as provides essential software for academic success.</h4>
                       <br>
                       <span href="panelHwSw-btn" class="default-button default-button__white">Learn More About Hardware & Software &raquo;</span></p>
@@ -244,9 +246,9 @@ The settings for the "sliding" action are set in main.js
                   <div class="col-md-7 col-sm-12">
                     <div class="airy side-padding">
                       <h2 class="heading white">Mobile Charging Stations</h2>
-                      <h4 class="subheading white">There are six free-standing mobile charging stations in Frey Hall and Javits Lecture Center installed as part of the University's MOBILE/DIGITAL NOW initiative.</h4>
+                      <h4 class="subheading white">There are <strong>6</strong> free-standing mobile charging stations in Frey Hall and Javits Lecture Center installed as part of the University's MOBILE/DIGITAL NOW initiative.</h4>
                       <br>
-                      <span href="panelHwSw-btn" class="default-button default-button__white">Learn More About Hardware & Software &raquo;</span></p>
+                      <span href="panelHwSw-btn" class="default-button default-button__white">Learn More About Mobile Charging Stations &raquo;</span></p>
                     </div>
                   </div>
                 </div>
@@ -268,7 +270,7 @@ The settings for the "sliding" action are set in main.js
       ** Learning Tools Section **
       ====================================================================== -->
       <section id="learningTools">
-        <div class="full-height-section display--flex">
+        <div class="display--flex">
           <div class="container">
             <div class="col-md-12 col-sm-12 cozy">
               <<div class="cozy text-center">
@@ -285,7 +287,7 @@ The settings for the "sliding" action are set in main.js
                   </div>
                   <div class="col-md-7 col-sm-12">
                     <div class="airy">
-                      <h2 class="heading white">Google Apps</h2>
+                      <h2 class="heading white">Google<span class="small">.stonybrook.edu</span></h2>
                       <h4 class="subheading white">Stony Brook's Google Apps suite of products includes Mail, Calendar, Drive, Contacts, Sites, Groups, Hangouts and a host of other applications to enhance communication and real-time collaboration across campus.</h4>
                       <br>
                       <span href="panelGoogle-btn" class="default-button default-button__white">Learn More About Google Apps &raquo;</span>
@@ -298,7 +300,7 @@ The settings for the "sliding" action are set in main.js
                   </div>
                   <div class="col-md-7 col-sm-12">
                     <div class="airy side-padding">
-                      <h2 class="heading white">Blackboard</h2>
+                      <h2 class="heading white">Blackboard<span class="small">.stonybrook.edu</span></h2>
                       <h4 class="subheading white">Blackboard is Stony Brook University's learning management system (LMS), which allows instructors to supplement face-to-face classes, or launch online classes.</h4>
                       <br>
                       <span href="panelBlackboard-btn" class="default-button default-button__white">Learn More About Blackboard &raquo;</span>
@@ -311,8 +313,8 @@ The settings for the "sliding" action are set in main.js
                   </div>
                   <div class="col-md-7 col-sm-12">
                     <div class="airy side-padding">
-                      <h2 class="heading white">Lynda.com</h2>
-                      <h4 class="subheading white">Lynda.com is a service that offers high-quality video tutorials for common computer applications and other skills.</h4>
+                      <h2 class="heading white">Lynda<span class="small">.stonybrook.edu</span></h2>
+                      <h4 class="subheading white">Stony Brook offers Lynda.com as a service. Lynda.com offers high-quality video tutorials for common computer applications and other skills.</h4>
                       <br>
                       <span href="panelLynda-btn" class="default-button default-button__white">Learn More About Lynda &raquo;</span>
                     </div>
