--- a/source/src_scss/molecules/cards/_box-card.scss
+++ b/source/src_scss/molecules/cards/_box-card.scss
@@ -5,7 +5,6 @@
     margin: 1em 0;
     padding: .5em;
     width: 100%;
-    max-width: 500px;
     border: 1px solid #000;
     background-color: #fff;
     color: #000;
@@ -18,18 +17,17 @@
 }
 .box-card--heading {
   font-weight: 700;
-  margin-bottom: .1em !important;
+  line-height: 1;
+  margin-bottom: 0 !important;
 }
 .box-card--subheading {
   font-size: .9em;
   font-weight: 500;
-  margin-bottom: 1em;
 }
-
 .box-card--content {
+    margin-top: 1em;
     margin-bottom: 1em;
 }
-
 .box-card--cta {
   font-size: .8em;
   line-height: 1em;
@@ -39,7 +37,12 @@
       display: block !important;
     }
 }
-
 .box-card__no-border {
   border: 0 !important;
+}
+.box-card__border-white {
+  border: 1px solid #fff !important;
+}
+.box-card__transparent-background {
+  background-color: transparent !important;
 }
