--- a/source/src_scss/organisms/heros/_hero-beyond.scss
+++ b/source/src_scss/organisms/heros/_hero-beyond.scss
@@ -6,7 +6,14 @@
   background-size: cover;
   z-index: 10;
 }
-
+.hero-beyond__white {
+  background: #800000 url('../images/backgrounds/farbeyond-stripes/whiteSwooshes.jpg') repeat top center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  z-index: 10;
+}
 .hero-beyond--headings
 {
   margin: 3.5em 0;
